actualizando css y detail track

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,16 @@
 *{
     box-sizing: border-box;
 }
+
+/*Header*/
+header{
+    display: flex;
+}
+/*Header*/
+
+/*Footer*/
+footer{
+    display: flex;
+}
+/*Footer*/
+
