--- a/css/playlist-style.css
+++ b/css/playlist-style.css
@@ -7,11 +7,7 @@ body {
 .music-container{
     font-family: sans-serif;
     width: 350px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%,);
-    display: block;
-    position: absolute;
+    margin: 0 auto;
     background-image: linear-gradient(#6c6cff,#6b3636);
 }
 .music-header{
@@ -43,8 +39,6 @@ body {
 }
 .music-playlist{
     width: 100%;
-    height: 450px;
-
 }
 .music.menu{
     width: 100%;
