--- a/css/styles.css
+++ b/css/styles.css
@@ -8,13 +8,12 @@
 header{
     display: flex;
     font-family: 'Josefin Sans', sans-serif;
-    margin: 0px;
-    padding: 0px;
-    margin: 0px;
+    flex-wrap: wrap;
     justify-content: space-between;
+    width: 100%;
 }
-img.logo{
-    text-align: right;
+form{
+    justify-content: left;
 }
 p.header, a{
     letter-spacing: 2px;
@@ -22,6 +21,21 @@ p.header, a{
     color: white;
     text-decoration: none;
 }
+
+form, input, button{
+    font-family: 'Josefin Sans', sans-serif;
+    align-self: center;
+    color: white;
+    margin: 1px;
+    margin-top: 0px;
+    padding: 9px;
+    border: 0px white solid;
+    border-radius: 50px;
+}
+button{
+    color: black;
+}
+
 /*Header*/
 
 /*Footer*/
@@ -42,9 +56,7 @@ a.foot{
 
 /*Home*/
 body.presentacion{
-    background-image: url(../img/fotomujercantando_auto_x2.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+ background-image: linear-gradient();
 }
 a.pre,a.pre2, a.pre3{
     letter-spacing: 2px;
@@ -87,7 +99,7 @@ img.artist{
 
 /*Detail.track*/
 body{
-    background-color: rgb(214, 179, 247);
+    background-image: linear-gradient(#6c6cff, #6b3636);
 }
 section.track{
     flex-direction: row;
@@ -189,7 +201,6 @@ ul.lista1, ul.lista2{
 }
 
 /*Detail Genres*/
-
 .contenedor_detail_genres_albumes {
     display: flex;
     flex-wrap:wrap;
@@ -250,15 +261,12 @@ border-radius: 50%;
 
 /*Página géneros*/
 .contenedor_generos{
-
     display: flex;
     flex-wrap:wrap;
     justify-content: center;
     padding: 15px;
 }
-
 .genres {
-
     width: 25%;
     text-align: center;
     padding-top: 25px;
