--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,9 @@
 li{
     list-style: none;
 }
+body{
+    background-image: linear-gradient(#6c6cff, #6b3636);
+}
 /*Generales*/
 
 /*Header*/
@@ -60,10 +63,6 @@ a.pre{
     letter-spacing: 3px;
     text-align: right;
 }
-section.pres{
-    text-align: center;
-    text-indent: -50px;
-}
 /*Header*/
 
 /*Footer*/
@@ -100,7 +99,10 @@ h1.presen{
     padding: 0px;
     line-height: 3px;
 }
-
+section.pres{
+    text-align: center;
+    text-indent: -50px;
+}
 .track_home_conteiner {
     display: flex;
     flex-wrap:wrap;
@@ -170,9 +172,6 @@ border-radius: 50%;
 /*Home*/
 
 /*Detail.track*/
-body{
-    background-image: linear-gradient(#6c6cff, #6b3636);
-}
 section.track{
     flex-direction: row;
     flex-wrap: wrap;
@@ -269,8 +268,11 @@ h1.dom{
     letter-spacing: 3px;
     margin: 30px;
 }
-ul.lista1, ul.lista2{
+ul.lista1{
     margin: 6px
+}
+.top{
+    list-style: upper-roman;
 }
 
 /*Detail Genres*/
