--- a/css/styles.css
+++ b/css/styles.css
@@ -378,6 +378,9 @@ body.generos h1 { font-family:'Josefin Sans', sans-serif;
     display: flex;
     background-image: linear-gradient(#6c6cff, #6b3636);
 }
+img{
+    border-radius: 5%;
+}
 .play-img img{
     width: 70px;
     height: 68px;
@@ -440,7 +443,7 @@ body.generos h1 { font-family:'Josefin Sans', sans-serif;
 }
 .music-progress .progress-bar{
     width: 0%;
-    background-color: white;
+    background-color: #6c6cff;
     animation: width 10s infinite;
 }
 @keyframes width{
