alinee items en el responsive mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -430,12 +430,11 @@ img{
     /*home*/
   
 
+    /*géneros*/
+
+    
 
 }
-
-
-
-
 
 
 /*Mobile*/
@@ -517,6 +516,12 @@ img{
         text-align: center;
         
     }
+    .last-item {
+        width: 100%;
+        margin: 2.5%;
+        text-align: center;
+
+    }
     
    
 
@@ -543,11 +548,11 @@ img{
     .contenedor_generos { 
         align-items: center;
         padding: 1%;
-        width: 100vh;
     }
     .genres {
         width: 45%;
         margin: 2.5%;
+        
         text-align: center;
     }
         
