--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,8 @@ header{
     justify-content: space-between;
     width: 100%;
 }
-form{
+form{ 
+
     justify-content: left;
 }
 .header, a{
@@ -68,7 +69,7 @@ button{
     letter-spacing: 3px;
     text-align: right;
 }
-/*Header*/
+/*Header css final*/
 
 /*Footer*/
 footer{
@@ -89,7 +90,7 @@ footer{
 i{
     margin: 4px;
 }
-/*Footer*/
+/*Footer css final*/
 
 /*Home*/
 .prese {
@@ -172,7 +173,7 @@ h3 {
     width: 100%;
     border-radius: 50%;
 }
-/*Home*/
+/*Home css final*/
 
 /*Detail.track*/
 .track{
@@ -319,7 +320,7 @@ h3 {
     font-size: 65px;
     padding: 20px;
 }
-/*Página géneros*/
+/*Página géneros css final*/
 
 
 /*Página playlist*/
@@ -569,6 +570,8 @@ img{
     .menu { 
         font-size: 15px;
         margin: 4px;
+        padding: 0;
+        width: 100%;
     }
     form {
         padding-left: 25%;
@@ -657,6 +660,19 @@ img{
         margin-top: 0;
     }
     
+    /* footer*/ 
+    footer p {
+        font-size: 3px;
+    }
+    footer i {
+        font-size: 3px;
+    }
+    .foot {
+        font-size: 3px;
+    }
+
+
 }
 
-/*Media Queries*/
+
+
