--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ form{
     color: white;
     text-decoration: none;
 }
-form, input, button{
+input, button{
     font-family: 'Josefin Sans', sans-serif;
     align-self: center;
     color: white;
@@ -75,8 +75,6 @@ footer{
     font-family: 'Josefin Sans', sans-serif;
     font-size: 13px;
     margin: 16px;
-    display: flex;
-    align-items: flex-end;
     padding-top: 80px;
     color: white;
     word-spacing: 2px;
@@ -88,6 +86,10 @@ footer{
 }
 i{
     margin: 4px;
+}
+p{
+    display: flex;
+    flex-direction: row;
 }
 /*Footer*/
 
@@ -196,7 +198,7 @@ h3 {
     letter-spacing: 5px;
     margin: 30px;
 }
-.eyes, .halsey, .hal, .si2, .lista2{
+.eyes, .halsey, .hal, .si2{
     font-family: 'Josefin Sans', sans-serif;
     color: white;
     font-size: 22px;
@@ -450,7 +452,7 @@ img{
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: flex-start;
-        height: 50vh;  
+        min-height: 540px;
     }
     .sey{
         width: 40vw;
@@ -468,11 +470,6 @@ img{
     }
     .info{
         width: 40vw;
-    }
-    .lista2{
-        display: flex;
-        flex-wrap: wrap;
-        width: 50vw; 
     }
 
     /*géneros*/
@@ -492,15 +489,13 @@ img{
         font-size: 50px;
     }
 
-    /*menu*/
-    
+    /*menu*/    
     form, input, button{
         margin: 0;
         margin-top: 0px;
         padding: 6px;
         font-size: 12px;
-    }
-    
+    }    
     .menu { 
         font-size: 15px;
         margin: 6px;
@@ -556,6 +551,20 @@ img{
 
 /*Mobile*/
 @media (max-width: 420px){
+
+    /*Search Results*/
+    .search{
+        font-size: 40px;
+        margin-top: 15%;
+        margin-bottom: 10%;
+    }
+    .result0{
+        font-size: 10px;
+    }
+
+    .result1{
+        font-size: 20px;
+    }
 
     /*Home*/
     form, input, button{
